<resources>
    <string name="app_name">MyShopListSQLite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Ayuda</string>

    <string name="menu_create_shopping_list">Nueva lista de compra</string>
    <string name="menu_show_shopping_lists">Mis listas de compra</string>

    <!-- otras opciones del menú del navigationDrawer -->

    <string name="menu_groups">Grupos</string>
    <string name="menu_create_group">Crear nuevo grupo</string>

    <string name="menu_account">Cuenta</string>
    <string name="menu_logout">Cerrar Sesión</string>

</resources>